--- a/simplestWordCounter/makefile
+++ b/simplestWordCounter/makefile
@@ -1,4 +1,4 @@
-count_words: count_words.o lexer.o -lfl
+count_words: count_words.o lexer.o
 	gcc count_words.o lexer.o -lfl -o count_words
 count_words.o: count_words.c
 	gcc -c count_words.c
