a long-waited update2

--- a/Step1/CMakeLists.txt
+++ b/Step1/CMakeLists.txt
@@ -21,3 +21,4 @@ add_executable(Tutorial tutorial.cxx)
 
 # TODO 9: Use target_include_directories to include ${PROJECT_BINARY_DIR}
 target_include_directories(Tutorial PUBLIC "${PROJECT_BINARY_DIR}")
+message(STATUS "PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
